--- a/tests/kuttl/tests/fernet_rotation/02-rotate_keys.yaml
+++ b/tests/kuttl/tests/fernet_rotation/02-rotate_keys.yaml
@@ -1,6 +1,5 @@
-apiVersion: v1
-kind: Secret
-metadata:
-  name: keystone
-  annotations:
-    keystone.openstack.org/rotatedat: "2009-11-10T23:00:00Z"
+apiVersion: kuttl.dev/v1beta1
+kind: TestStep
+commands:
+  - script: |
+      oc patch secret keystone -n $NAMESPACE --type=merge -p '{"metadata":{"annotations":{"keystone.openstack.org/rotatedat":"2009-11-10T23:00:00Z"}}}'
