--- a/templates/keystoneapi/config/keystone.conf
+++ b/templates/keystoneapi/config/keystone.conf
@@ -2,32 +2,32 @@
 use_stderr=true
 
 [cache]
-{{if .memcachedTLS}}
+{{if .v1.memcachedTLS}}
 backend = dogpile.cache.pymemcache
-memcache_servers={{ .memcachedServers }}
+memcache_servers={{ .v1.memcachedServers }}
 {{else}}
 backend = dogpile.cache.memcached
-memcache_servers={{ .memcachedServersWithInet }}
+memcache_servers={{ .v1.memcachedServersWithInet }}
 {{end}}
 enabled=true
-tls_enabled={{ .memcachedTLS }}
+tls_enabled={{ .v1.memcachedTLS }}
 
 [database]
 max_retries=-1
 db_max_retries=-1
-connection={{ .DatabaseConnection }}
+connection={{ .v1.DatabaseConnection }}
 
 [oslo_policy]
-enforce_new_defaults = {{ .enableSecureRBAC }}
-enforce_scope = {{ .enableSecureRBAC }}
+enforce_new_defaults = {{ .v1.enableSecureRBAC }}
+enforce_scope = {{ .v1.enableSecureRBAC }}
 
 [fernet_tokens]
 key_repository=/etc/keystone/fernet-keys
-max_active_keys={{ .fernetMaxActiveKeys }}
+max_active_keys={{ .v1.fernetMaxActiveKeys }}
 
-{{ if (index . "TransportURL") }}
+{{ if (index .v1 "TransportURL") }}
 [oslo_messaging_notifications]
 driver=messagingv2
-transport_url={{ .TransportURL }}
+transport_url={{ .v1.TransportURL }}
 topics = barbican_notifications
 {{ end }}
