Improve User Input Validation
This PR improves the kubebuilder validators on the several spec items.

Signed-off-by: Veronika Fisarova <vfisarov@redhat.com>

--- a/api/bases/keystone.openstack.org_keystoneservices.yaml
+++ b/api/bases/keystone.openstack.org_keystoneservices.yaml
@@ -125,6 +125,7 @@ spec:
                   type: object
                 type: array
               serviceID:
+                description: ServiceID
                 type: string
             type: object
         type: object
