--- a/config/crd/bases/keystone.openstack.org_keystoneservices.yaml
+++ b/config/crd/bases/keystone.openstack.org_keystoneservices.yaml
@@ -125,6 +125,7 @@ spec:
                   type: object
                 type: array
               serviceID:
+                description: ServiceID
                 type: string
             type: object
         type: object
