Changed the metadata files location
... to /var/cache/httpd/metadata

Signed-off-by: Veronika Fisarova <vfisarov@redhat.com>

--- a/templates/keystoneapi/config/keystone-api-config.json
+++ b/templates/keystoneapi/config/keystone-api-config.json
@@ -68,7 +68,7 @@
         },
         {
             "source": "/var/lib/config-data/default/multirealm-federation/*",
-            "dest": "/etc/httpd/conf/multirealm/",
+            "dest": "/var/lib/httpd/metadata/",
             "owner": "keystone:apache",
             "perm": "0644",
             "optional": true,
@@ -88,8 +88,9 @@
             "recurse": true
         },
         {
-            "path": "/etc/httpd/conf/multirealm",
+            "path": "/var/lib/httpd/metadata",
             "owner": "keystone:apache",
+            "perm": "0775",
             "recurse": true
         }
     ]
