Adding /var/lib/httpd to have 775 permissions
Signed-off-by: Veronika Fisarova <vfisarov@redhat.com>

--- a/templates/keystoneapi/config/keystone-api-config.json
+++ b/templates/keystoneapi/config/keystone-api-config.json
@@ -92,6 +92,12 @@
             "recurse": true
         },
         {
+            "path": "/var/lib/httpd",
+            "owner": "keystone:apache",
+            "perm": "0775",
+            "recurse": true
+        },
+        {
             "path": "/var/lib/httpd/metadata",
             "owner": "keystone:apache",
             "perm": "0775",
