--- a/config/crd/bases/keystone.openstack.org_keystoneapplicationcredentials.yaml
+++ b/config/crd/bases/keystone.openstack.org_keystoneapplicationcredentials.yaml
@@ -88,6 +88,10 @@ spec:
                       type: string
                   type: object
                 type: array
+              domainName:
+                default: Default
+                description: DomainName - the Keystone domain of the user
+                type: string
               expirationDays:
                 default: 365
                 description: ExpirationDays sets the lifetime in days for the ApplicationCredential
