--- a/config/crd/bases/keystone.openstack.org_keystoneapplicationcredentials.yaml
+++ b/config/crd/bases/keystone.openstack.org_keystoneapplicationcredentials.yaml
@@ -74,18 +74,24 @@ spec:
                 description: AccessRules defines which services the ApplicationCredential
                   is permitted to access
                 items:
-                  description: ACRule defines a additional access rule for an ApplicationCredential
+                  description: ACRule defines an access rule for an ApplicationCredential
                   properties:
                     method:
-                      description: Method is the HTTP verb to allow (defaults to all
-                        if empty)
+                      description: Method is the HTTP verb to allow
+                      minLength: 1
                       type: string
                     path:
                       description: Path is the API path to allow
+                      minLength: 1
                       type: string
                     service:
                       description: Service is the OpenStack service type
+                      minLength: 1
                       type: string
+                  required:
+                  - method
+                  - path
+                  - service
                   type: object
                 type: array
               expirationDays:
@@ -101,6 +107,7 @@ spec:
                 type: integer
               passwordSelector:
                 description: PasswordSelector for extracting the service password
+                minLength: 1
                 type: string
               roles:
                 description: Roles to assign to the ApplicationCredential
@@ -110,6 +117,7 @@ spec:
                 type: array
               secret:
                 description: Secret containing service user password
+                minLength: 1
                 type: string
               unrestricted:
                 default: false
@@ -190,6 +198,11 @@ spec:
                 description: LastRotated - timestamp when credentials were last rotated
                 format: date-time
                 type: string
+              observedGeneration:
+                description: ObservedGeneration - the most recent generation observed
+                  for this ApplicationCredential.
+                format: int64
+                type: integer
               rotationEligibleAt:
                 description: |-
                   RotationEligibleAt indicates when rotation becomes eligible (start of grace period window).
